--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,7 +12,9 @@ permissions:
   contents: read
 
 jobs:
-
+  # Build the application and database.
+  build:
+    uses: ./.github/workflows/build.yml
   # Lint the Bicep file.
   lint:
     uses: ./.github/workflows/lint.yml
@@ -20,10 +22,10 @@ jobs:
   # Deploy to the test environment.
   deploy-test:
     uses: ./.github/workflows/deploy.yml
-    needs: lint
+    needs: [build, lint]
     with:
       environmentType: Test
-      resourceGroupName: ToyWebsiteTest
+      resourceGroupName: rg_sb_eastus_89803_1_170967138212
       reviewApiUrl: https://sandbox.contoso.com/reviews
     secrets:
       AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID_TEST }}
@@ -34,10 +36,13 @@ jobs:
   # Deploy to the production environment.
   deploy-production:
     uses: ./.github/workflows/deploy.yml
-    needs: deploy-test
+    needs:
+      - lint
+      - build
+      - deploy-test
     with:
       environmentType: Production
-      resourceGroupName: ToyWebsiteProduction
+      resourceGroupName: rg_sb_southeastasia_89803_3_170967138642
       reviewApiUrl: https://api.contoso.com/reviews
     secrets:
       AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID_PRODUCTION }}
